--- a/HTML and CSS Course/First_Website/index.html
+++ b/HTML and CSS Course/First_Website/index.html
@@ -137,15 +137,15 @@
         </section>
         <!--END GALLERY-->
         <!--RSVP-->
-        <section>
-            <div id="contact">
-                <div>
-                    <h1>Reservations</h1>
-                    <div>
+        <section id="contact">
+            <div class="container">
+                <div class="heading-padding">
+                    <h1 class="heading-padding">Reservations</h1>
+                    <div class="reservation">
                         <h2><span>Your adventure is just around the moon.</span>
                             <br>Reserve your flight today!
                         </h2>
-                        <p>
+                        <p class="rsvp-text">
                             Please provide us with your basic contact information.
                         </p>
                         <div>
