--- a/HTML and CSS Course/One_Page_Website/index.html
+++ b/HTML and CSS Course/One_Page_Website/index.html
@@ -46,7 +46,12 @@
                         <div class="photo">
                             <img src="./images/Thumbnail_1.png" alt="" width="400" height="75">
                         </div>
-                        I use ChroMapper to make all of my Beat Saber maps
+                        <p>
+                            I use ChroMapper to make all of my Beat Saber maps <br>
+                            Because of the file max size being 100 MB; Kobaryo - northern_limit <br>
+                            and Laur - Animosity. Are not made by me.
+                        </p>
+
                     </div>
                     <!--END PHOTO CONTAINER 1-->
                     
@@ -56,17 +61,17 @@
         <!--END GALLERY-->
         <section id="mapping">
             <div class="container">
-                <h1>Maps Made</h1>
+                <h1>Maps Showcase</h1>
                 <div>
                     <!--Video 1-->
                     <div>
-                        <h3 class="white-head">Song: Enzalla - Cobalt</h3>
-                        <iframe src="./videos/Enzalla - Cobalt.mp4" frameborder="0"></iframe>
+                        <h3 class="white-head">Song: Kobaryo - northern_limit</h3>
+                        <iframe src="./videos/Kobaryo - northern_limit.mp4" frameborder="0"></iframe>
                     </div>
                     <!--Video 2-->
                     <div>
-                        <h3 class="white-head">Song: Everen Maxwell - Battle For Eternity</h3>
-                        <iframe src="./videos/Everen Maxwell - Battle For Eternity.mp4" frameborder="0"></iframe>
+                        <h3 class="white-head">Song: Laur - Animosity</h3>
+                        <iframe src="./videos/Laur - Animosity.mp4" frameborder="0"></iframe>
                     </div>
                     <!--Video 3-->
                     <div>
@@ -75,8 +80,8 @@
                     </div>
                     <!--Video 4-->
                     <div>
-                        <h3 class="white-head">Song: Sakuzyo - Altale</h3>
-                        <iframe src="./videos/Sakuzyo - Altale.mp4" frameborder="0"></iframe>
+                        <h3 class="white-head">Song: meganeko - Velocity</h3>
+                        <iframe src="./videos/meganeko - Velocity.mp4" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
