--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -25,7 +25,7 @@
                         <a class="nav-link text-light" href="#">About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">Showtimes</a>
+                        <a class="nav-link text-light" href="#showtimes">Showtimes</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link text-light" href="#">Deals</a>
