--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -145,16 +145,72 @@
             </div>
         </div>
         <!--/SHOWTIMES-->
-
-        <div class="text-center">
-            <form>
-                <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form> 
+        <!-- jumbotron heading -->
+        <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+            <div class="container">
+                <h1 class="display-4 hidden-sm-down" style="color: #fff; font-family: roboto; font-weight: 900; text-transform: uppercase;">
+                Movie Deals</h1>
+                <p class="lead">Check out our monthly deals...</p>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#register">See our monthly movie deals!</button>
+            </div>
         </div>
+        <!-- /jumbo-->
+        <!-- signup form -->
+        <div class="row">
+            <div class="container text-center col-ad-6" id="deals">
+                <div class="container text-center">
+                    <h1 class="display-5 my-4 col-lg-auto text-primary">Stay current on movies!</h1>
+                    <div class="input-group mb-5 input-group-sm">
+                        <input type="email" class="form-control" placeholder="Email">
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to receive weekly movie deals.">
+                                Signup!
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/signup form -->
+
+        <!-- form modal -->
+        <div class="modal fade" id="register">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Register to receive movie deals...</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <fieldset class="form-group">
+                                <label for="firstname">First Name:</label>
+                                <input type="text" class="form-control" id="firstname" placeholder="John">
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label for="lastname">Last Name:</label>
+                                <input type="text" class="form-control" id="lastname" placeholder="Smith">
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" placeholder="john.smith@example.com">
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label for="password">First Name:</label>
+                                <input type="password" class="form-control" id="password" placeholder="password...">
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/form modal -->
 
         <div class="container my-5">
             <ul class="nav nav-inline">
@@ -179,5 +235,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        $('.popover-dismiss').popover({
+            trigger: 'focus'
+        });
+    </script>
+    </body>
 </html>
