--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">About</a>
+                        <a class="nav-link text-light" href="#about">About</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link text-light" href="#showtimes">Showtimes</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link text-light" href="#">Deals</a>
+                        <a class="nav-link text-light" href="#deals">Deals</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id="about">
             <div class="row">
                 <div class="col-sm">
                     <img class="img-fluid" src="./Img/pdx.png" alt="">
@@ -146,7 +146,7 @@
         </div>
         <!--/SHOWTIMES-->
         <!-- jumbotron heading -->
-        <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+        <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center" id="deals">
             <div class="container">
                 <h1 class="display-4 hidden-sm-down" style="color: #fff; font-family: roboto; font-weight: 900; text-transform: uppercase;">
                 Movie Deals</h1>
